--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -2,24 +2,47 @@
     font-family: 'Press Start 2P', cursive;
     margin: 0;
     padding: 0;
+    color: white;
 }
 
 body {
-    background-color: #2b5329;
+    background-color: #BC02FD;
 }
 
-.code-background-container {
-    position: fixed;
-    top: 0;
-    left: 0;
+header {
     width: 100%;
-    height: 100%;
-    text-align: center;
-    overflow: hidden;
+    height: auto;
+
 }
 
-svg {
-    display: inline-block;
-    height: 100%;
-    
+#header-section {
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(0deg, rgba(188, 2, 253, 1) 10%, rgba(0, 7, 0, 1) 25%, rgba(0, 7, 0, 1) 75%, rgba(188, 2, 255, 1) 95%);
+    position: relative;
+}
+
+#header-title {
+    position: relative;
+    justify-self: center;
+    font-size: 5vw;
+    top: 40%;
+    z-index: 1;
+    animation: glitch 2s steps(100) infinite;
+}
+
+.falling-numbers {
+    top: 0;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+}
+
+.falling-numbers span {
+    position: relative;
+    width: 20px;
+    height: 20px;
+    color: black;
+    filter: drop-shadow(0 0 10px black);
+    animation: dropping 3s linear infinite;
 }
