--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -5,14 +5,24 @@
     color: white;
 }
 
-body {
-    background-color: #BC02FD;
+::-webkit-scrollbar {
+    display: none;
 }
 
+::-webkit-scrollbar-button {
+    display: none;
+}
+
+body {
+    width: 100%;
+    background-color: #BC02FD;
+    -ms-overflow-style: none;
+}
+
+/* Header */
 header {
     width: 100%;
     height: auto;
-
 }
 
 #header-section {
@@ -45,4 +55,127 @@ header {
     color: black;
     filter: drop-shadow(0 0 10px black);
     animation: dropping 3s linear infinite;
+}
+/* Header */
+
+
+/* Navigation */
+#navigation {
+    width: 100%;
+    height: 5em;
+    background: #333333;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+}
+
+.navigation-hidden {
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateX(-100%);
+    transition: all 0.5s;
+}
+
+.navigation-show {
+    opacity: 1;
+    filter: blur(0);
+    transform: translateX(0);
+    transition: opacity 0.3s ease-in-out;
+}
+
+.navigation-item a i {
+    color: whitesmoke;
+    font-size: 50px;
+}
+/* Navigation */
+
+/* HOME */
+.home-hero {
+    width: 100%;
+    height: 100vh;
+}
+
+.home-hero-content {
+    height: 600px;
+    padding: 20px;
+    margin-left: 40px;
+    margin-right: 40px;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 40px;
+}
+
+.home-hero img {
+    width: 400px;
+    height: 400px;
+    border-radius: 15em;
+    filter: drop-shadow(0 0 10px black);
+}
+
+.home-hero-description {
+    width: 50%;
+    padding: 3em;
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.567), rgba(5, 0, 0, 0));
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border-radius: 20px;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.home-hero-description h1{
+    font-size: 3rem;
+    margin-bottom: 20px;
+    color: #333333;
+}
+
+.home-hero-description p {
+    font-size: 1.8rem;
+}
+
+@media (max-width: 884px) {
+    .home-hero-content {
+        margin-top: 10px;
+        flex-direction: column;
+    }
+    .home-hero img {
+        width: 200px;
+        height: 200px;
+    }
+    .home-hero-description {
+        width: 100%;
+        text-align: center;
+    }
+    .home-hero-description h1 {
+        font-size: 1.4rem;
+        padding: 0.1em;
+    }
+    .home-hero-description p {
+        width: 100%;
+        font-size: 0.8rem;
+        padding: 0.1em;
+    }
+}
+/* HOME */
+
+.about-hero {
+    width: 100%;
+    height: 100vh;
+    background-color: #0ACCFF;
+}
+
+.projects-hero {
+    width: 100%;
+    height: 100vh;
+    background-color: #A8FF00;
+}
+
+.contact-hero {
+    width: 100%;
+    height: 100vh;
+    background-color: #E0E0E0;
 }
