--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -35,7 +35,7 @@ header {
 #header-title {
     position: relative;
     justify-self: center;
-    font-size: 5vw;
+    font-size: 6vw;
     top: 40%;
     z-index: 1;
     animation: glitch 2s steps(100) infinite;
@@ -56,6 +56,7 @@ header {
     filter: drop-shadow(0 0 10px black);
     animation: dropping 3s linear infinite;
 }
+
 /* Header */
 
 
@@ -70,26 +71,24 @@ header {
     position: sticky;
     top: 0;
     z-index: 1;
+    overflow: hidden;
 }
 
 .navigation-hidden {
     opacity: 0;
-    filter: blur(5px);
-    transform: translateX(-100%);
-    transition: all 0.5s;
+    transition: opacity 0.5s ease-in-out;
 }
 
 .navigation-show {
     opacity: 1;
-    filter: blur(0);
-    transform: translateX(0);
-    transition: opacity 0.3s ease-in-out;
+    transition: opacity 1s ease-in-out;
 }
 
 .navigation-item a i {
     color: whitesmoke;
     font-size: 50px;
 }
+
 /* Navigation */
 
 /* HOME */
@@ -127,14 +126,17 @@ header {
     border: 1px solid rgba(255, 255, 255, 0.1);
 }
 
-.home-hero-description h1{
-    font-size: 3rem;
+.home-hero-description h1 {
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 5rem;
     margin-bottom: 20px;
     color: #333333;
 }
 
 .home-hero-description p {
+    font-family: 'Times New Roman', Times, serif;
     font-size: 1.8rem;
+    margin: 0.5em;
 }
 
 @media (max-width: 884px) {
@@ -142,31 +144,95 @@ header {
         margin-top: 10px;
         flex-direction: column;
     }
+
     .home-hero img {
         width: 200px;
         height: 200px;
     }
+
     .home-hero-description {
         width: 100%;
         text-align: center;
     }
+
     .home-hero-description h1 {
         font-size: 1.4rem;
         padding: 0.1em;
     }
+
     .home-hero-description p {
         width: 100%;
         font-size: 0.8rem;
         padding: 0.1em;
     }
 }
+
 /* HOME */
 
+/* ABOUT */
 .about-hero {
     width: 100%;
     height: 100vh;
     background-color: #0ACCFF;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
 }
+
+.about-hero-description {
+    width: auto;
+    font-size: 1em;
+}
+
+.about-hero-wraper {
+    width: 210px;
+    height: 95%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.about-hero-techologies,
+.about-hero-techologies-backwards {
+    height: 100%;
+    width: 100px;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    overflow: hidden;
+    mask-image: linear-gradient(to top,
+            rgba(0, 0, 0, 0),
+            rgba(0, 0, 0, 1) 20%,
+            rgba(0, 0, 0, 1) 80%,
+            rgba(0, 0, 0, 0));
+
+}
+
+.logo,
+.logo-backwards {
+    width: 100px;
+    height: 100px;
+    position: absolute;
+}
+
+.logo {
+    top: -20%;
+    animation: scrollDown;
+    animation-duration: 30s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+
+.logo-backwards {
+    bottom: -20%;
+    animation: scrollUp;
+    animation-duration: 30s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+
+/* ABOUT */
 
 .projects-hero {
     width: 100%;
@@ -179,3 +245,23 @@ header {
     height: 100vh;
     background-color: #E0E0E0;
 }
+
+/* Footer */
+footer {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+footer h3 {
+    color: #333333;
+}
+
+footer h3 a {
+    text-decoration: none;
+    animation: glitch 2s steps(100) infinite;
+}
+
+/* Footer */
